# iis_komo

./: .gitignore  CMakeLists.txt  README  package.xml
config/: MT.cfg  env.ors  iis_robot.kvg  kuka.kvg  test.kvg
config/iis_robot/: iis_robot.kvg  left_arm.ors  left_sdh.ors  right_arm.ors  right_sdh.ors  table.ors  torso.ors
data/: env.ors  iis_robot.kvg
data/iis_robot/: iis_robot.kvg  left_arm.ors  left_sdh.ors  right_arm.ors  right_sdh.ors  torso.ors
data/kuka_arm/: kuka_arm.ors  z.urdf  z1-raw.ors
data/kuka_schunk/: kuka_schunk.ors
include/: iis_robot.h  iis_robot_path.h  iis_robot_state.h  komo_interface.h  komo_interface.h.autosave  komo_wrapper.h  robot_interface.h  time_parameterization.h  utils.h
launch/: hardware_adapter.launch  iis_komo.launch  test_scene.launch
scripts/: demo.sh  init.sh  ors_edit  run_komo.sh  switch_mode
src/: iis_komo.cpp  info.cpp  komo_interface.cpp  komo_wrapper.cpp  main.cpp  robot_interface.cpp  test.cpp  time_parameterization.cpp
srv/: Move.srv  PlanTrajectory.srv
test/: test_KOMO_pick.cpp
